sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  
{
  var taille = getNombreValeurs()
  var permute:Boolean=true
  while (permute)
  {
    permute=false
    for (i<-0 to taille-2) 
    {
      if (!plusPetit(i,i+1)) 
      {
        echange(i,i+1)
        p?rmute=true
      }
    }   
  }
}